fix card spacing in mobile

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -996,7 +996,7 @@
 }
 
 .status {
-  padding: 8px 10px;
+  padding: 15px 0;
   position: relative;
   min-height: 54px;
   border-bottom: 1px solid lighten($ui-base-color, 8%);
@@ -5218,7 +5218,7 @@ a.status-card.compact:hover {
 /* Media Gallery */
 .media-gallery {
   box-sizing: border-box;
-  margin-top: 8px;
+  margin-top: 15px;
   overflow: hidden;
   border-radius: 0;
   position: relative;
